--- a/src/components/Wood/Wood.css
+++ b/src/components/Wood/Wood.css
@@ -1,7 +1,3 @@
-.card div {
-  color: blue;
-}
-
 .card {
   display: flex;
   flex-direction: column;
@@ -14,10 +10,43 @@
   align-items: center;
 
   height: 100%;
-  width: 300px;
+  width: 500px;
 
   border: 2px;
   border-style: solid;
   border-radius: 20px;
-  color: red;
+  border-color: rgb(87, 42, 24);
+}
+
+.all-totals {
+  margin-bottom: 10px;
+}
+
+.totals {
+  display: flex;
+  flex-direction: row;
+  width: 490px;
+  height: 100%;
+
+  align-items: center;
+  justify-content: space-evenly;
+  margin: 5px;
+
+  border: 2px;
+  border-style: solid;
+  border-radius: 20px;
+}
+
+.totals p {
+  border: 1px;
+  border-style: solid;
+  border-radius: 20px;
+
+  width: 100%;
+  padding-left: 10px;
+  justify-content: center;
+  align-content: center;
+  color: rgb(87, 42, 24);
+  font-weight: bold;
+  background-color: rgb(190, 93, 54);
 }
