--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,6 +14,7 @@ header {
 h2 {
   font-size: 2em;
   text-transform: uppercase;
+  padding-left: 10px;
 }
 
 .header > button {
@@ -24,4 +25,5 @@ h2 {
   font-size: large;
   font-weight: 700;
   text-transform: uppercase;
+  padding-right: 20px;
 }
