--- a/src/components/Wood/Wood.css
+++ b/src/components/Wood/Wood.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: grey;
 
   height: 100%;
   width: 500px;
@@ -16,6 +17,10 @@
   border-style: solid;
   border-radius: 20px;
   border-color: rgb(87, 42, 24);
+
+  box-shadow: 4px 4px 5px 0px rgb(87, 42, 24);
+  -webkit-box-shadow: 4px 4px 5px 0px rgb(87, 42, 24);
+  -moz-box-shadow: 4px 4px 5px 0px rgb(87, 42, 24);
 }
 
 .all-totals {
@@ -30,23 +35,44 @@
 
   align-items: center;
   justify-content: space-evenly;
-  margin: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 
-  border: 2px;
+  border: 2px 0px 0px 0px;
   border-style: solid;
-  border-radius: 20px;
 }
 
-.totals p {
+.left {
+  display: flex;
+
   border: 1px;
-  border-style: solid;
-  border-radius: 20px;
+  border-right-style: solid;
 
   width: 100%;
+  height: 78.9px;
   padding-left: 10px;
   justify-content: center;
-  align-content: center;
+  align-items: center;
   color: rgb(87, 42, 24);
   font-weight: bold;
+  font-size: 2em;
   background-color: rgb(190, 93, 54);
+  margin: 0;
+}
+
+.right {
+  display: flex;
+  border: 1px;
+  border-left-style: solid;
+
+  width: 100%;
+  height: 78.9px;
+  padding-left: 10px;
+  justify-content: center;
+  align-items: center;
+  color: rgb(190, 93, 54);
+  font-weight: bold;
+  font-size: 2.5em;
+  background-color: rgb(87, 42, 24);
+  margin: 0;
 }
