--- a/src/components/HeaderSub/HeaderSub.css
+++ b/src/components/HeaderSub/HeaderSub.css
@@ -1,8 +1,31 @@
 .header-sub {
   display: flex;
-  height: 50px;
-  background-color: grey;
+  height: 46px;
+  background-color: black;
+  color: grey;
 
   font-weight: bold;
-  align-items: center;
+  font-size: 1.3em;
+  align-items: baseline;
+  padding-left: 5px;
+
+  border-bottom: 1px solid;
+
+  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
+.header-sub a {
+  background-color: white;
+  height: 100%;
+  border: 1px solid grey;
+}
+
+.header-sub a:hover {
+  color: white;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
+  font-size: 1.1em;
+  background-color: grey;
+  border: 1px solid white;
 }
