--- a/src/components/HeaderSub/HeaderSub.css
+++ b/src/components/HeaderSub/HeaderSub.css
@@ -1,7 +1,7 @@
 .header-sub {
   display: flex;
   height: 46px;
-  background-color: black;
+  background-color: white;
   color: grey;
 
   font-weight: bold;
@@ -17,7 +17,7 @@
 }
 
 .header-sub a {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   height: 100%;
   border: 1px solid grey;
 }
