--- a/src/components/RawMaterials/Stone/Stone.css
+++ b/src/components/RawMaterials/Stone/Stone.css
@@ -10,28 +10,27 @@
   align-items: center;
   background-color: grey;
 
-  height: 100%;
+  height: 325px;
   width: 500px;
 
   border: 2px;
   border-style: solid;
-  border-radius: 20px;
-  border-color: rgb(61, 61, 61);
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-color: rgb(59, 59, 59);
 
-  box-shadow: 4px 4px 5px 0px rgb(61, 61, 61);
-  -webkit-box-shadow: 4px 4px 5px 0px rgb(61, 61, 61);
-  -moz-box-shadow: 4px 4px 5px 0px rgb(61, 61, 61);
-}
-
-.stone-all-totals {
-  margin-bottom: 10px;
+  box-shadow: 4px 4px 5px 0px rgb(59, 59, 59);
+  -webkit-box-shadow: 4px 4px 5px 0px rgb(59, 59, 59);
+  -moz-box-shadow: 4px 4px 5px 0px rgb(59, 59, 59);
 }
 
 .stone-totals {
   display: flex;
   flex-direction: row;
   width: 490px;
-  height: 100%;
+  height: 50px;
 
   align-items: center;
   justify-content: space-evenly;
@@ -46,33 +45,31 @@
   display: flex;
 
   border: 1px;
-  border-right-style: solid;
+  border-style: solid;
 
   width: 100%;
-  height: 78.9px;
-  padding-left: 10px;
+  height: 55px;
   justify-content: center;
   align-items: center;
-  color: rgb(168, 168, 168);
+  color: rgb(177, 177, 177);
   font-weight: bold;
   font-size: 2em;
-  background-color: rgb(61, 61, 61);
+  background-color: rgb(59, 59, 59);
   margin: 0;
 }
 
 .stone-right {
   display: flex;
   border: 1px;
-  border-left-style: solid;
+  border-style: solid;
 
   width: 100%;
-  height: 78.9px;
-  padding-left: 10px;
+  height: 55px;
   justify-content: center;
   align-items: center;
-  color: rgb(61, 61, 61);
+  color: rgb(59, 59, 59);
   font-weight: bold;
   font-size: 2.5em;
-  background-color: rgb(168, 168, 168);
+  background-color: rgb(177, 177, 177);
   margin: 0;
 }
